# cco-small-projects

./: .gitignore
fun/: Makefile  README.md  Setup.lhs  TODO.txt  design.md  fun.cabal  run_tests.sh  uuagc_options
fun/src/: CheapPrinter.hs  HmCore.hs  ParseHM.hs  PpCore.hs
fun/src/CCO/: Compiler.hs
fun/src/CCO/BNormal/: AddForcing.hs  AddLaziness.hs  AnnotateTailCalls.hs  AttachBuiltins.hs  Builtins.hs  Context.hs  ToCore.hs
fun/src/CCO/BNormal/AG/: AddForcing.ag  AddLaziness.ag  AnnotateTailCalls.ag  AttachBuiltins.ag  BNormal.ag  BNormalUtils.hs  ToCore.ag
fun/src/CCO/Core/: Base.hs  Print.hs
fun/src/CCO/Core/AG/: Base.ag  ToCoreRun.ag
fun/src/CCO/HM/: AG.hs  ANormal.hs  AddForcing.hs  AddLaziness.hs  AnnotateTailCalls.hs  AttachBuiltins.hs  Base.hs  Builtins.hs  Compiler.hs  Context.hs  Lexer.hs  Parser.hs  PrintUtils.hs  Sanitize.hs  Table.hs  TmSymbolTable.hs  ToANormal.hs  ToBNormal.hs  ToCore.hs
fun/src/CCO/HM/AG/: ANormal.ag  ANormalUtils.hs  AddForcing.ag  AddLaziness.ag  AnnotateTailCalls.ag  AttachBuiltins.ag  BNormal.ag  BNormalUtils.hs  Base.ag  BaseHelpers.hs  HmCore.ag  Sanitize.ag  ToANormal.ag  ToBNormal.ag  ToCore.ag
fun/src/CCO/SystemF/: AG.hs
fun/tests/: cons.lam  id.lam  if-in-let.lam  if-isnil-in-var.lam  if-isnil-tail.lam  if-isnil.lam  if-then-else.lam  if-with-plus.lam  inf-list.lam  inf-rec.lam  lazy-example.lam  length.lam  let-in.lam  mutual-rec-syntax.lam  not-anormal-if.lam  not-anormal.lam  one-length.lam  out-of-scope.lam  prim-eq.lam  prim.lam  shadowing.lam  trivial-recursion.lam  zero-length.lam
fun/tests/fail/: fail-inf-loop.core-aterm  fail-inf-loop.hm-aterm  fail-inf-loop.lam  fail-inf-loop.tcrr  fail-out-of-scope.hm-aterm
mf/: Makefile  README  TODO.txt  mf.cabal
mf/examples/: break.c  continue.c  loop_forever.c  malloc.c  simple.c
mf/examples/const_propagation/: bad-if.c  basic.c  fib.c  good-if.c  proc-simple.c  proc.c  reassign.analysis  reassign.c  while.analysis  while.c
mf/examples/strong_live_variable/: b-var.c  basic.c  if.c  proc-id.c  proc-simple.c  while.c
mf/src/: Analysis.hs  ApplyConstantPropagation.hs  ApplyStronglyLiveVariable.hs  ChaoticIteration.hs  Comment.hs  ConstantPropagation.hs  Dev.hs  InterproceduralMFP.hs  IntraproceduralMFP.hs  Labelling.hs  Main.hs  Parser.y  PrettyPrint.hs  Properties.hs  StronglyLiveVariable.hs
mf/src/AG/: ApplyConstantPropagation.ag  ApplyStronglyLiveVariable.ag  AttributeGrammar.ag  ConstantPropagation.ag  LabellingCata.ag  PrettyPrintCatas.ag  PropertyCatas.ag  StronglyLiveVariable.ag
mf/src/Parsing/: Lexer.hs  Lexer.x  Parser.hs  Parser.y
tdiagrams/: README.md  tdiagrams.cabal  uuagc_options
tdiagrams/counterexamples/: invalid_compile.tdg  invalid_execute.tdg  many_errors.tdg
tdiagrams/examples/: compile_compiler.tdg  compile_complex.tdg  compile_complex_double.tdg  compile_simple.tdg  compile_twice.tdg  compiler.tdg  deep_compile.tdg  double_compile.tdg  double_nesting.tdg  exec_compile.tdg  execute_interpreter.tdg  execute_simple.tdg  interpret_left_assoc.tdg  interpret_right_assoc.tdg  interpreter.tdg  mix_complex.tdg  platform.tdg  program.tdg
tdiagrams/src/: TDiagToPicture.hs  TypeCheckTDiag.hs
tdiagrams/src/CCO/: Diag.hs
tdiagrams/src/CCO/Diag/: AG.ag  AG.hs  Base.hs  DiagType.hs  Figure.hs  TypeCheck.hs  TypeError.hs
tdiagrams/src/CCO/Diag/AG/: Base.ag  BaseHelper.hs  BaseInstances.hs  MakePicture.ag  MakePictureHelpers.ag  TypeCheck.ag  TypeCheckHelper.ag
tdiagrams/src/CCO/Picture/: AG.hs
tdiagrams/src/CCO/Picture/AG/: Base.ag
