name:                  fun
version:               0.0.8.1
synopsis:              Utilities for a simple, implicitly typed functional
                       language.
description:           Project distribution for Mini Project D and E of the course on
                       Compiler Constructionn (INFOMCCO) at Utrecht University.
license:               BSD3
license-file:          LICENSE
category:              Compilers/Interpreters
copyright:             (c) 2008-2014 Utrecht University
author:                Stefan Holdermans <stefan@holdermans.nl>
maintainer:            Atze Dijkstra <atze@uu.nl>
stability:             provisional
homepage:              http://www.cs.uu.nl/wiki/Cco/CourseSoftware
tested-with:           GHC == 7.10.2
build-type:            Custom
cabal-version:         >= 1.8
extra-source-files:    AUTHORS, README,
                       src/CCO/HM/AG.ag,
                       src/CCO/HM/AG/Base.ag,
                       src/CCO/Core/AG.ag,
                       src/CCO/Core/AG/Base.ag,
                       src/CCO/Core/AG/ToCoreRun.ag

executable parse-hm
  main-is:             ParseHM.hs
  build-depends:       base >= 4 && < 5, uu-cco >= 0.1.0.1, uuagc, uuagc-cabal
  other-modules:       CCO.HM, CCO.HM.Base, CCO.HM.AG.Base, CCO.HM.AG.BaseHelpers, CCO.HM.Lexer,
                       CCO.HM.Parser, CheapPrinter
  hs-source-dirs:      src

executable hm2cr
  main-is:             HmCore.hs
  build-depends:       base >= 4 && < 5, uu-cco >= 0.1.0.1, uuagc, uuagc-cabal
  other-modules:       CCO.Core.AG.Base,
                       CCO.BNormal.AddForcing,
                       CCO.BNormal.AddForcing,
                       CCO.BNormal.AddLaziness,
                       CCO.BNormal.AG.AddForcing,
                       CCO.BNormal.AG.AddLaziness,
                       CCO.BNormal.AG.AnnotateTailCalls,
                       CCO.BNormal.AG.AttachBuiltins,
                       CCO.BNormal.AG.BNormal,
                       CCO.BNormal.AG.BNormalUtils,
                       CCO.BNormal.AG.ToCore,
                       CCO.BNormal.AnnotateTailCalls,
                       CCO.BNormal.AttachBuiltins,
                       CCO.BNormal.Builtins,
                       CCO.BNormal.Context,
                       CCO.BNormal.ToCore,
                       CCO.HM,
                       CCO.HM.AG.Base,
                       CCO.HM.AG.BaseHelpers,
                       CCO.HM.AG.Sanitize,
                       CCO.HM.AG.ToBNormal,
                       CCO.HM.Base,
                       CCO.HM.PrintUtils,
                       CCO.HM.Sanitize,
                       CCO.HM.TmSymbolTable,
                       CCO.HM.ToBNormal,
                       CheapPrinter
  hs-source-dirs:      src

executable pp-core
  main-is:             PpCore.hs
  build-depends:       base >= 4 && < 5, uu-cco >= 0.1.0.1, uhc-light >= 1.1.9.2, uhc-util >= 0.1.6.3, uuagc,
                       uuagc-cabal, vector
  other-modules:       CCO.Core, CCO.Core.Base, CCO.Core.AG.Base, CCO.Core.AG.ToCoreRun
  hs-source-dirs:      src
