
name:                  mf
version:               0.1.0.0
description:           Project distribution for Mini Project F of the course on
                       Compiler Construction (INFOMCCO) at Utrecht University.
category:              Compilers/Interpreters
license:               BSD3
-- license-file:       LICENSE
author:                Yorick Sijsling, Jarno le Conte and Nico Naus
maintainer:            Jurriaan Hage <J.Hage@uu.nl>
homepage:              http://foswiki.cs.uu.nl/foswiki/Cco/MiniProjects
build-type:            Simple
cabal-version:         >=1.8
extra-source-files:    Makefile,
                       examples/cp1.c,
                       examples/fib.c,
                       src/AG/AttributeGrammar.ag
                       src/AG/PropertyCatas.ag
                       src/AG/LabellingCata.ag
                       src/AG/PrettyPrintCatas.ag
                       src/Parsing/Lexer.x
                       src/Parsing/Parser.y

executable mf
  main-is:             Main.hs
  other-modules:       Dev
                       Labelling
                       Properties
  build-depends:       base >= 4 && < 5, containers, array, pretty
  hs-source-dirs:      src
