name:                  tdiagrams
version:               0.0.5.0
synopsis:              Utilities for drawing T-diagrams in LaTeX
description:           Project distribution for Mini Project B of the course on
                       Compiler Construction (INFOMCCO) at Utrecht University.
license:               AllRightsReserved
license-file:          LICENSE
category:              Compilers/Interpreters
copyright:             (c) 2008-2014 Utrecht University
author:                Stefan Holdermans
maintainer:            Stefan Holdermans <stefan@cs.uu.nl>
stability:             provisional
homepage:              http://www.cs.uu.nl/wiki/Cco/MiniProjects
tested-with:           GHC == 6.8.2, GHC == 6.8.3, GHC == 6.10.1
build-type:            Custom
cabal-version:         >= 1.8
extra-source-files:    AUTHORS, Makefile, src/CCO/Diag/AG/TypeCheck.ag,
                       src/CCO/Diag/AG/MakePicture.ag,
                       src/CCO/Diag/AG/Base.ag, src/CCO/Picture/AG.ag,
                       src/CCO/Picture/AG/Base.ag,
                       src/CCO/Picture/AG/Printing.ag

executable parse-tdiag
  main-is:             ParseTDiag.hs
  build-depends:       base, uu-cco >= 0.1.0.1, uuagc, uuagc-cabal
  other-modules:       CCO.Diag, CCO.Diag.Base, CCO.Diag.Lexer,
                       CCO.Diag.Parser, CCO.Diag.AG.Base, CCO.Diag.AG.BaseHelper, CCO.Diag.AG.BaseInstances
  hs-source-dirs:      src

executable tc-tdiag
  main-is:             TypeCheckTDiag.hs
  build-depends:       base, uu-cco >= 0.1.0.1, uuagc, uuagc-cabal
  other-modules:       CCO.Diag, CCO.Diag.Base, CCO.Diag.TypeCheck, CCO.Diag.AG.TypeCheck, CCO.Diag.TypeError,
                       CCO.Diag.AG.Base, CCO.Diag.AG.TypeCheckHelper, CCO.Diag.AG.BaseHelper, CCO.Diag.AG.BaseInstances
  hs-source-dirs:      src

executable tdiag2picture
  main-is:             TDiagToPicture.hs
  build-depends:       base, uu-cco >= 0.1.0.1, uuagc, uuagc-cabal
  other-modules:       CCO.Diag, CCO.Diag.Base, CCO.Picture, CCO.Picture.AG, CCO.Diag.Figure, CCO.Diag.AG.MakePicture,
                       CCO.Diag.AG.Base
  hs-source-dirs:      src

executable pp-picture
  main-is:             PpPicture.hs
  build-depends:       base, uu-cco >= 0.1.0.1, uuagc, uuagc-cabal
  other-modules:       CCO.Picture, CCO.Picture.AG
  hs-source-dirs:      src
